# django_app

./: .gitignore  Dockerfile  Procfile  README.md  dev-compose.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
db_data/pgdata/: postmaster.pid
db_data/pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
db_data/pgdata/pg_stat/: pgstat.stat
db_data/pgdata/pg_xact/: 0000
docs/: index.md  test.md
quoteapp/: admin.py  views.py
quoteapp/migrations/: 0001_initial.py  0004_rename_born_place_author_born_location.py  0009_initial.py
quoteapp/templates/quoteapp/: base.html  detail_author.html  index.html  quotes_with_tag.html  scraping.html
quoteapp/templatetags/: scrape_site.py
quotes/: settings.py  urls.py
quotes/quoteapp/: admin.py  forms.py  models.py  mongo_connect.py  mongo_load_quotes.py  urls.py  views.py
quotes/quoteapp/migrations/: 0001_initial.py  0002_alter_quote_author_alter_quote_tags.py  0002_rename_born_location_author_born_place.py  0003_alter_author_born_date_alter_author_fullname.py  0003_alter_quote_author.py  0005_alter_author_born_location.py  0006_alter_author_born_location.py  0007_quote_author_oid_alter_quote_author.py  0008_delete_author_delete_quote.py  0010_alter_pgquote_quote.py
quotes/quotes/: settings.py  urls.py
quotes/scripts/: mongo_connect.py  mongo_load_quotes.py  mongo_models.py
quotes/users/: forms.py  urls.py  views.py
staticfiles/quoteapp/: style.css
test_mkdocs/: main.py  test.py
users/: forms.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+107 files in other folders)
