[tool.poetry]
name = "django-app"
version = "0.1.0"
description = ""
authors = ["Aleksandr <aleksandr.voitushenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
mongoengine = "^0.28.2"
certifi = "^2024.7.4"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
gunicorn = "^23.0.0"
whitenoise = "^6.7.0"
pillow = "^10.4.0"
django-environ = "^0.11.2"
mkdocs = "^1.6.1"
mkdocstrings-python = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
